Ajeitando as package, e alternado uns mapeamentos errado. E por fim testando no browser

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/livraria_banco
+spring.datasource.url=jdbc:postgresql://localhost/bancospring
 spring.datasource.username=postgres
 spring.datasource.password=postgre
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
