Testnado com postman e ajustando alguns erros do console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost/bancospring
+spring.datasource.url=jdbc:postgresql://localhost/livraria
 spring.datasource.username=postgres
 spring.datasource.password=postgre
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
